Cambios a quienes somos

--- a/somos.html
+++ b/somos.html
@@ -1,7 +1,14 @@
 <div class="container">
     <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">¿Quienes somos?</h2>
-        <p class="text-center wow fadeInDown">Somos una academia de beisbol respaldada por los clubes de beisbol nacional Tomateros de Culiacán y Rieleros de Aguascalientes.</p>
+        <p class="text-center wow fadeInDown">
+            Somos una organización de carácter deportivo orientada a preparar, desarrollar y optimizar el
+            desempeño de cada uno de ellos tanto<br/> 
+            como deportistas como ciudadanos. Trabajando de forma sistematizada
+            e integral de manera que permita cumplir con las exigencias del mejor Beisbol.<br/>
+            Para lograr dicha tarea, contamos con <a href="">personal especializado</a> en los distintos aspectos físicos
+            para la práctica del Beisbol; así como apoyo en el área nutricional y psicológica/motivacional. 
+        </p>
     </div>
     <div class="row">
         <div class="col-sm-6 wow fadeInLeft">
