Mas cambios visuales.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="scroll active"><a href="#home">Inicio</a></li>
                         <li class="scroll"><a href="#somos">¿Quienes somos?</a></li>
                         <li class="scroll"><a href="#staff">Staff</a></li>
-                        <li class="scroll"><a href="#media">Media</a></li>
+                        <li class="scroll"><a href="#galeria">Galerías</a></li>
                         <li class="scroll"><a href="#noticias">Noticias</a></li>
                         <li class="scroll"><a href="#get-in-touch">Contacto</a></li>
                     </ul>
@@ -73,8 +73,10 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2>
-                                        Ha abierto inscripciones <span>MG Academia de Beisbol</span>!
+                                        <span>Inscripciones abiertas!</span>
                                     </h2>
+                                    <p>Inscripciones abiertas para el ciclo 2016.</p>
+                                    <a class="btn btn-primary btn-lg" href="#">Inscribete ahora!</a>
                                 </div>
                             </div>
                         </div>
@@ -88,8 +90,10 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2>
-                                        Ha abierto inscripciones <span>MG Academia de Beisbol</span>!
+                                        <span>Inscripciones abiertas!</span>
                                     </h2>
+                                    <p>Inscripciones abiertas para el ciclo 2016.</p>
+                                    <a class="btn btn-primary btn-lg" href="#">Inscribete ahora!</a>
                                 </div>
                             </div>
                         </div>
@@ -110,7 +114,87 @@
     </section>
     <section id="somos"></section>
     <section id="staff"></section>
-    <section id="media"></section>
+    <section id="galeria">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title text-center wow fadeInDown">Galerías</h2>
+                <p class="text-center wow fadeInDown">Fotos y videos de MG en acción.</p>
+            </div>
+            <div class="text-center">
+                <ul class="galeria-filter">
+                    <li><a class="active" href="#" data-filter="*">Todas las Galerías</a></li>
+                    <li><a href="#" data-filter=".instalaciones">Instalaciones</a></li>
+                    <li><a href="#" data-filter=".campo">Campo</a></li>
+                    <!--<li><a href="#" data-filter=".entrenamientos">Entrenamientos</a></li>-->
+                </ul>
+            </div>
+            <div class="galeria-items">
+                <div class="galeria-item instalaciones">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m1.jpg" alt="Edificio" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Instalaciones</h3>
+                            <a href="img/galeria/m1.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="galeria-item instalaciones">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m2.jpg" alt="Edificio" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Area de entrenamiento</h3>
+                            <a href="img/galeria/m2.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="galeria-item instalaciones">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m3.jpg" alt="Edificio" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Area de entrenamiento</h3>
+                            <a href="img/galeria/m4.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="galeria-item campo">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m5.jpg" alt="Campo" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Campo</h3>
+                            <a href="img/galeria/m5.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="galeria-item campo">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m6.jpg" alt="Campo" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Campo</h3>
+                            <a href="img/galeria/m6.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="galeria-item campo">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m7.jpg" alt="Campo" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Campo</h3>
+                            <a href="img/galeria/m7.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="galeria-item campo">
+                    <div class="galeria-item-inner">
+                        <img src="img/galeria/m8.jpg" alt="Campo" class="img-responsive">
+                        <div class="galeria-info">
+                            <h3>Campo</h3>
+                            <a href="img/galeria/m8.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="noticias"></section>
     <section id="get-in-touch">
         <div class="container">
