--- a/media.html
+++ b/media.html
@@ -1,14 +1,79 @@
 <div class="container">
     <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">Galerías</h2>
-        <p class="text-center wow fadeInDown">Descripción de las galerias.</p>
+        <p class="text-center wow fadeInDown">Fotos y videos de MG en acción.</p>
     </div>
     <div class="text-center">
-        <ul class="media-filter">
+        <ul class="galeria-filter">
             <li><a class="active" href="#" data-filter="*">Todas las Galerías</a></li>
-            <li><a href="#" data-filter=".creative">Instalaciones</a></li>
-            <li><a href="#" data-filter=".corporate">Videos</a></li>
-            <li><a href="#" data-filter=".portfolio">Entrenamientos</a></li>
-        </ul><!--/#portfolio-filter-->
+            <li><a href="#" data-filter=".instalaciones">Instalaciones</a></li>
+            <li><a href="#" data-filter=".campo">Campo</a></li>
+            <!--<li><a href="#" data-filter=".entrenamientos">Entrenamientos</a></li>-->
+        </ul>
+    </div>
+    <div class="galeria-items">
+        <div class="galeria-item instalaciones">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m1.jpg" alt="Edificio" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Instalaciones</h3>
+                    <a href="img/galeria/m1.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="galeria-item instalaciones">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m2.jpg" alt="Edificio" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Area de entrenamiento</h3>
+                    <a href="img/galeria/m2.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="galeria-item instalaciones">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m3.jpg" alt="Edificio" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Area de entrenamiento</h3>
+                    <a href="img/galeria/m4.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="galeria-item campo">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m5.jpg" alt="Campo" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Campo</h3>
+                    <a href="img/galeria/m5.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="galeria-item campo">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m6.jpg" alt="Campo" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Campo</h3>
+                    <a href="img/galeria/m6.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="galeria-item campo">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m7.jpg" alt="Campo" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Campo</h3>
+                    <a href="img/galeria/m7.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="galeria-item campo">
+            <div class="galeria-item-inner">
+                <img src="img/galeria/m8.jpg" alt="Campo" class="img-responsive">
+                <div class="galeria-info">
+                    <h3>Campo</h3>
+                    <a href="img/galeria/m8.jpg" class="preview" rel="prettyPhoto"><i class="fa fa-eye"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
