--- a/staff.html
+++ b/staff.html
@@ -1,3 +1,8 @@
-<div>
-    Staff
+<div class="container">
+    <div class="section-header">
+        <h2 class="section-title text-center wow fadeInDown">Staff</h2>
+        <p class="text-center wow fadeInDown">
+            Conoce a nuestro Staff...
+        </p>
+    </div>
 </div>
