--- a/noticias.html
+++ b/noticias.html
@@ -1,3 +1,8 @@
-<div>
-    noticias
+<div class="container">
+    <div class="section-header">
+        <h2 class="section-title text-center wow fadeInDown">Noticias</h2>
+        <p class="text-center wow fadeInDown">
+            Noticias relevantes...
+        </p>
+    </div>
 </div>
