Reestructuras, imagenes y noticias.

--- a/contacto.html
+++ b/contacto.html
@@ -9,9 +9,10 @@
 
                         <address>
                             <strong>Academia de Beisbol MG</strong><br>
-                            Eusebio Kino #33333<br>
-                            Ensenada, Baja California. México 22880<br>
-                            <abbr title="Teléfono">T:</abbr> (646) 456-7890
+                            Eusebio Kino #1809<br/>
+                            Col. Maestros 22840<br/>
+                            Ensenada, Baja California. México<br/>
+                            <abbr title="Teléfono">T:</abbr> (646) 131-7761
                         </address>
 
                         <form id="main-contact-form" name="contact-form" method="post" action="#">
