--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>
+
+                    <a class="navbar-brand" href="index.html"><img src="img/rieleros-logo.png" alt="logo"></a>
                 </div>
-                <div class="collapse navbar-collapse navbar-right">
+                <div class="collapse navbar-collapse navbar-left">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="#home">Inicio</a></li>
                         <li class="scroll"><a href="#somos">¿Quienes somos?</a></li>
@@ -42,6 +43,9 @@
                         <li class="scroll"><a href="#noticias">Noticias</a></li>
                         <li class="scroll"><a href="#get-in-touch">Contacto</a></li>
                     </ul>
+                </div>
+                <div class="navbar-header pull-right" style="padding-top: 20px; padding-bottom: 10px;">
+                    <a class="navbar-brand" href="index.html"><img src="img/logo-2.png" alt="logo" style="top:15px;"></a>
                 </div>
             </div>
         </nav>
