--- a/somos.html
+++ b/somos.html
@@ -11,29 +11,59 @@
         </p>
     </div>
     <div class="row">
-        <div class="col-sm-6 wow fadeInLeft">
+        <div class="col-sm-4 wow fadeInLeft">
             <img src="img/bg1.jpg" alt="centro" class="img-responsive">
         </div>
+        <div class="col-sm-8 wow fadeinleft animated" style="visibility: visible; animation-name:fadeInLeft;">
+            <br/>
+            <h3 class="column-title">
+                Objetivos
+            </h3>
+            <p>
+                Contribuir a la inserción efectiva en la sociedad de dos sectores específicos de la población venezolana,
+                representados por, jóvenes cesanteados del béisbol rentado de Estados Unidos o de otra liga profesional de este deporte,
+                y niños/adolescentes de escasos recursos en situación de riesgo (drogas, delincuencia);
+                bajo un proyecto que enmarcado en el béisbol, permita crear un sistema de formación de ciudadanos integrales.
+            </p>
+            <!--<div class="media service-box wow fadeInRight">-->
+                <!--&lt;!&ndash;<div class="pull-left"><i class="fa fa-line-chart"></i></div>&ndash;&gt;-->
+                <!--<div class="pull-left">-->
+                    <!--<a href="http://rielerosags.com/" target="_blank"><img src="img/rieleros.png" alt="Rieleros"/></a>-->
+                <!--</div>-->
+                <!--<div class="media-body">-->
+                    <!--<h4 class="media-heading">Rieleros de Aguascalientes</h4>-->
+                    <!--<p>Rieleros de Aguascalientes. club de beisbol de la liga mexicana de beisbol...</p>-->
+                <!--</div>-->
+            <!--</div>-->
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-6">
-            <div class="media service-box wow fadeInRight">
-                <!--<div class="pull-left"><i class="fa fa-line-chart"></i></div>-->
-                <div class="pull-left">
-                    <a href="http://rielerosags.com/" target="_blank"><img src="img/rieleros.png" alt="Rieleros"/></a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Rieleros de Aguascalientes</h4>
-                    <p>Rieleros de Aguascalientes. club de beisbol de la liga mexicana de beisbol...</p>
-                </div>
-            </div>
-            <div class="media service-box wow fadeInRight">
-                <div class="pull-left">
-                    <a href="http://www.tomateros.com.mx/" target="_blank"><img src="img/tomateros.jpg" alt="Tomateros"/></a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Tomateros de Culiacán</h4>
-                    <p>Tomateros de Culiacán. club de beisbol de la liga mexicana del pacifico...</p>
-                </div>
-            </div>
+            <h3 class="column-title">
+                Misión
+            </h3>
+            <p>
+                Formar ciudadanos integrales, con opciones reales de insertarse efectivamente en la sociedad, a través
+                de la convergencia de esfuerzos del conjunto de individuos necesarios para organizar la práctica del
+                béisbol menor, bajo un sistema de desarrollo por categorías, estructurado con base en principios éticos
+                y morales, que permita a los jóvenes integrantes de la organización, contar con una sólida base deportiva
+                y ciudadana.
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <h3 class="column-title">
+                Visión
+            </h3>
+            <p>
+                La visión por su parte constituye más bien, el objetivo a largo plazo de la institución, representa el
+                enunciado con miras hacia dónde se visualiza la organización en el futuro. El lugar en el cual se avizora
+                la academia en el futuro y el ¿cómo?, se comunica a continuación:
+            </p>
+            <p>
+                La academia aspira desarrollar un sistema de entrenamiento y práctica del béisbol por categorías, lo
+                suficientemente eficiente, redituable, que pueda replicarse no solo en el municipio de Ensenada, sino
+                que también en el Estado de Baja California y en todo el territorio Nacional.
+            </p>
         </div>
     </div>
 </div>
