--- a/staff.html
+++ b/staff.html
@@ -2,7 +2,108 @@
     <div class="section-header">
         <h2 class="section-title text-center wow fadeInDown">Staff</h2>
         <p class="text-center wow fadeInDown">
-            Conoce a nuestro Staff...
+            ¡Conoce a nuestro Staff!
         </p>
+    </div>
+    <div class="row">
+        <div class="col-sm6 col-md-3">
+            <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
+                <div class="team-img">
+                    <img class="img-responsive" src="img/staff/ricardomarchena.jpg" alt="">
+                </div>
+                <div class="team-info">
+                    <h3>Luis Ricardo Marchena Guerrero</h3>
+                    <span>Entrenador de Beisbol</span>
+                </div>
+
+                <ul>
+                    <li>Primer estatal a los 6 años.</li>
+                    <li>8 Nacionales.</li>
+                    <li>3 Torneos internacionales</li>
+                    <li>Firmado por Tampa Bay Rays en 2008.</li>
+                    <li>Campeonato de la Liga Norte de México 2010 con Marineros de Ensenada.</li>
+                    <li><a href="#">Más...</a></li>
+                </ul>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-sm6 col-md-3">
+            <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
+                <div class="team-img">
+                    <img class="img-responsive" src="img/staff/marioperez.jpg" alt="">
+                </div>
+                <div class="team-info">
+                    <h3>Mario Antonio Pérez Santillan</h3>
+                    <span>Entrenador de Beisbol</span>
+                </div>
+                <ul>
+                    <li>2 Nacionales Nuevos Valores.</li>
+                    <li>8 Nacionales Infantiles.</li>
+                    <li>Japan Boys Baseball Classic 2010 y 2011.</li>
+                    <li>Baseball World Cup U-18 2013</li>
+                    <li><a href="#">Más...</a></li>
+                </ul>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-sm6 col-md-3">
+            <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
+                <div class="team-img">
+                    <img class="img-responsive" src="img/staff/humbertoperez.jpg" alt="">
+                </div>
+                <div class="team-info">
+                    <h3>Mario Humberto Pérez León</h3>
+                    <span>Entrenador de Beisbol</span>
+                </div>
+                <ul>
+                    <li>4 Nacionales Nuevos Valores.</li>
+                    <li>8 Nacionales Primera Fuerza.</li>
+                    <li>Campeón Nacional en La Paz, B.C.S. y Oaxaca.</li>
+                    <li>5o. Lugar en Juegos Centroamericanos y del Caribe 2012.</li>
+                    <li><a href="#">Más...</a></li>
+                </ul>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-sm6 col-md-3">
+            <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
+                <div class="team-img">
+                    <img class="img-responsive" src="img/staff/enriquegarcia.jpg" alt="">
+                </div>
+                <div class="team-info">
+                    <h3>Adrian Enrique García Mendoza</h3>
+                    <span>Entrenador Físico</span>
+                </div>
+                <ul>
+                    <li>Pasante en Fight & Fitness, Centro de Deportes.</li>
+                    <li>Ha practicado levantamiento olímpico de pesas y atletismo.</li>
+                    <li>Experiencia en preparación física de un equipo de futbol semi-profesional.</li>
+                    <li>Experiencia en preparación física a peleadores de artes marciales mixtas.</li>
+                    <li>Experiencia en preparación física a jugadores de futbol americano.</li>
+                    <li><a href="#">Más...</a></li>
+                </ul>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
